# crpt-portfolio

./: .gitignore  Cargo.toml  README.md  coins.json  ripple.json
conf/: coins-renamed-coingecko-tokens.json  coins.json  coins.json.original  config.json  holdings.json  wallets copy.json  wallets.json
data/: prices-202412081713.json  prices-202412081732.json
src/: main.rs
src/client/: coinapi.rs  coingecko.rs  cryptocompare.rs  mod.rs
src/coins/: filestore.rs  mod.rs  update_ath.rs  update_prices.rs
src/config/: coins.rs  mod.rs  wallets.rs
src/model/: coin_info_config.rs  holdings.rs  mod.rs
src/provider/: coinapi.rs  coingecko.rs  cryptocompare.rs  mod.rs
src/service/: mod.rs  report.rs
src/utils/: coin_list.rs  file_utils.rs  mod.rs
